// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselHeader should render as expected when the carousel is collapsed 1`] = `
<div
  className="carouselListTitle toolbarHide"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "textAlign": "center",
    }
  }
>
  <button
    className="btnToggleCarousel"
    onClick={[Function]}
  >
    <i
      className="material-icons"
      style={
        Object {
          "fontSize": "28px",
        }
      }
    >
      format_list_numbered
    </i>
  </button>
  <br />
  <div
    className="navBarSpace"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <EditorIndexTitle
      className="tituloCurso"
      courseTitle={true}
      onNameChanged={[MockFunction onTitleChanged]}
      title="IACR"
    />
  </div>
  <button
    className="btnFullCarousel"
    onClick={[Function]}
    style={
      Object {
        "position": "initial",
      }
    }
  >
    <i
      className="material-icons"
      style={
        Object {
          "fontSize": "32px",
        }
      }
    >
      keyboard_arrow_right
    </i>
  </button>
  <div
    className="clear"
  />
</div>
`;

exports[`CarouselHeader should render as expected when the carousel is expanded 1`] = `
<div
  className="carouselListTitle toolbarSpread"
  style={
    Object {
      "display": "flex",
      "flexFlow": "row",
      "textAlign": "left",
    }
  }
>
  <button
    className="btnToggleCarousel"
    onClick={[Function]}
  >
    <i
      className="material-icons"
      style={
        Object {
          "fontSize": "16px",
        }
      }
    >
      format_list_numbered
    </i>
  </button>
  <div
    className="navBarSpace"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <EditorIndexTitle
      className="tituloCurso"
      courseTitle={true}
      onNameChanged={[MockFunction onTitleChanged]}
      title="IACR"
    />
  </div>
  <button
    className="btnFullCarousel"
    onClick={[Function]}
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    <i
      className="material-icons"
      style={
        Object {
          "fontSize": "16px",
        }
      }
    >
      keyboard_arrow_right
    </i>
  </button>
  <div
    className="clear"
  />
</div>
`;
